PN-13564 added optional filter paNameFilter in getListOfOnboardedPA (#152)
